[tool.poetry]
name = "ulauncher-fzf"
version = "0.1.0"
description = ""
authors = ["Hillary Chan <hillary.chan91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
# Can't import ulauncher when developing
ignore_missing_imports = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pylint.messages_control]
disable= [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "no-self-use",
    "too-few-public-methods",
    "too-many-arguments",
    "raise-missing-from",
    "fixme"
]

[tool.pylint.typecheck]
ignored-modules="ulauncher"
