[project]
name = "ulauncher-fzf"
version = "0.1.0"
description = ""
authors = [{ name = "Hillary Chan", email = "hillary.chan91@gmail.com" }]
requires-python = ">=3.9,<4.0"
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=0.931,<0.932",
    "ruff>=0.11.11,<0.12",
]

[tool.uv]
package = false

[tool.mypy]
# Can't import ulauncher when developing
ignore_missing_imports = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # any-type
    "COM812", # missing-trailing-comma (avoid unexpected behaviour with formatter)

    # Disable rules related to missing docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention= "google"
